--- a/views/page.html
+++ b/views/page.html
@@ -18,30 +18,28 @@
     <hr />
     <div id="stories"></div>
     <hr />
-    <button id="loadMore"><h2>OLDER POSTS</h2></button>
     <script>
       $(document).ready(function() {
         var page = 0;
+        var loadMore = true;
         getFrontMenu();
         
         var idCategory = window.location.pathname.split("/").pop();
         $.post("/page/" + idCategory + "/page/" + page, function(data, status){
           var jsonData = JSON.parse(data);
           renderFrontPageStories(jsonData);
-          if (jsonData.length < 50) {
-              $('#loadMore').hide();
-            }
         });
 
-        $('#loadMore').on('click', function() {
-          page++;
-          $.post("/page/" + idCategory + "/page/" + page, function(data, status){
-            var jsonData = JSON.parse(data);
-            renderFrontPageStories(jsonData);
-            if (jsonData.length < 50) {
-              $('#loadMore').hide();
-            }
-          });
+        $(window).scroll(function () { 
+           if($(window).scrollTop() >= $(document).height() - $(window).height() - 10 && loadMore) {
+              page++;
+              loadMore = false;
+              $.post("/page/" + idCategory + "/page/" + page, function(data, status){
+                var jsonData = JSON.parse(data);
+                renderFrontPageStories(jsonData);
+                loadMore = jsonData.length == 50;
+              });
+           }
         });
 
       });
